# NeymarkTestApp

./: .gitignore  CMakeLists.txt  README.md
include/: ClientService.h  Logger.h  ServerService.h  Transport.h
lib/: Transport.cpp  Transport.h
src/: ClientCore.cpp  ServerCore.cpp  ServiceMain.cpp  Transport.cpp
